trunk/Archive2/b7/5909a7712a8da3/output
main.cpp: In function 'void fun1(T1)':
main.cpp:4:10: error: redefinition of 'void fun1(T1)'
     void fun1(T1) {}
          ^
main.cpp:3:10: error: 'void fun1(int)' previously defined here
     void fun1(int) {}
          ^
